<resources>
    <string name="app_name">Carbon</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Add_Game">addGame</string>
    <string name="Name">name</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="pleasant_peanut"><![CDATA[Pleasant Peanut < :]]></string>
    <string name="main_activity_image_peanut">main activity image peanut</string>
    <string name="AddNewSessionButton">addSessions</string>
    <string name="name">NAME:</string>
    <string name="low_score">LOW SCORE:</string>
    <string name="high_score">HIGH SCORE:</string>
    <string name="low_score_hint">low score</string>
    <string name="high_score_hint">high score</string>
    <string name="levels">Levels</string>
    <string name="current_game_image">IMAGE:</string>
    <string name="hmmm_there_seems_to_be_no_sessions_here_nwhy_don_t_you_click_this_button_to_add_a_new_session">Hmmm, there seems to be no sessions here!\nWhy don\'t you click this button to add a new session!</string>
    <string name="image_device">image device</string>
    <string name="image_cards">image cards</string>
    <string name="image_board_game">image board game</string>
    <string name="session_empty_state_peanut">session empty state peanut</string>
    <string name="arrow_in_session">arrow in session</string>
    <string name="image_for_game_icon">image for game icon</string>
    <string name="image_controller">image controller</string>
    <string name="image_kids_game">image kids game</string>
    <string name="image_sports">image sports</string>
    <string name="add_sessions">add sessions</string>
    <string name="enter_a_number_of_players_to_view_achievement_levels">Pick theme and difficulty, and enter a number of players to view achievement levels</string>
    <string name="number_of_players">Number of players</string>
    <string name="master_macadamia"><![CDATA[Master Macadamia > :]]></string>
    <string name="amazing_almond"><![CDATA[Amazing Almond >= :]]></string>
    <string name="pretty_pecan"><![CDATA[Pretty Pecan >= :]]></string>
    <string name="crazy_cornnut"><![CDATA[Crazy CornNut >= :]]></string>
    <string name="wacky_walnut"><![CDATA[Wacky Walnut >= :]]></string>
    <string name="savvy_soynut"><![CDATA[Savvy SoyNut >= :]]></string>
    <string name="crafty_cashew"><![CDATA[Crafty Cashew >= :]]></string>
    <string name="happy_hazelnut"><![CDATA[Happy Hazelnut >= :]]></string>
    <string name="playful_pistachio"><![CDATA[Playful Pistachio >= :]]></string>
    <string name="level_10">level 10</string>
    <string name="level_9">level 9</string>
    <string name="level_8">level 8</string>
    <string name="level_7">level 7</string>
    <string name="level_6">level 6</string>
    <string name="level_5">level 5</string>
    <string name="level_4">level 4</string>
    <string name="level_3">level 3</string>
    <string name="level_2">level 2</string>
    <string name="level_1">level 1</string>
    <string name="hi_there_i_m_pistol_pete_the_peanut_nto_add_a_game_follows_the_arrow_n_and_click_the_button">Hi there! I\'m Pistol Pete, the Peanut!\nTo add a game, follows the arrow\n and click the button!</string>
    <string name="total_players">Total Players:</string>
    <string name="total_score">Total Score:</string>
    <string name="num_of_players">players</string>
    <string name="total_score_of_players">Score</string>
    <string name="achievement">Achievement:</string>
    <string name="hi_there_i_m_pistol_pete_the_peanut_nto_add_a_game_follows_the_arrow_n_and_click_the_button1">Hi there! I\'m Pistol Pete, the Peanut!\nTo add a game, follows the arrow\n and click the button!</string>
    <string name="theme">Theme</string>
    <string name="difficulty_level">Difficulty</string>
    <string name="calculate">Calculate</string>
    <string name="difficulty_Level">Difficulty</string>
    <string name="set">set</string>
    <string name="Theme">Theme</string>
    <string name="enter_score">Enter Score</string>
    <string name="take_photo">Photo</string>
    <string name="current_sessions_image">Image:</string>
    <string name="citation"><a href="https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/course-info/styleguide">Java Coding Style Guide</a>
                \n<a href="https://fixed-meat-b95.notion.site/CMPT276-Team-Carbon-Image-Citations-4827299324c645f385cd871a88c5f8af">Images</a>
                \n<a href="https://themushroomkingdom.net/wav.shtml">Celebration Sound</a>
    </string>
    <string name="team_carbon">Team Carbon</string>
    <string name="developed_by_gahee_tj_max_garry">Developed by Gahee, TJ, Max, Garry</string>
    <string name="acknowledgements_and_credits">Acknowledgements and Credits:</string>
    <string name="achievement_level_achievement_level">Achievement Level: ACHIEVEMENT LEVEL</string>
    <string name="you_were_n_away_from_achievement_level">You were n away from ACHIEVEMENT LEVEL</string>
    <string name="animation">Animation</string>
    <string name="stats">STATS</string>
    <string name="about">About</string>
    <string name="about_page">About Page</string>
    <string name="add_game">Add Game!</string>
    <string name="add_session">Add Session</string>
    <string name="add_game1">Add Game!</string>
    <string name="add_game2">Add Game!</string>
    <string name="add_game3">Add Game!</string>
    <string name="save_session">Save Session</string>
    <string name="delete_session">Delete Session</string>
    <string-array name="levels">
        <item>Normal</item>
        <item>Easy</item>
        <item>Hard</item>
    </string-array>
    <string-array name="themes">
        <item>None</item>
        <item>Nut</item>
        <item>Emoji</item>
        <item>Middle Earth</item>
    </string-array>
</resources>