<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarSession"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:theme="@style/Theme.Carbon.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/sessionsToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:backgroundTint="@color/black"
            android:elevation="4dp"
            android:minHeight="56dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="#EDC95D" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/totalPlayersTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/total_players"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/achievementTextView" />

    <TextView
        android:id="@+id/totalScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/total_score"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/totalPlayersTextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/totalPlayersTextView"
        app:layout_constraintTop_toBottomOf="@+id/totalPlayersTextView"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/totalPlayers"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/num_of_players"
        android:inputType="number"
        android:minHeight="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/totalPlayersTextView"
        app:layout_constraintStart_toEndOf="@+id/totalPlayersTextView"
        app:layout_constraintTop_toTopOf="@+id/totalPlayersTextView"
        app:layout_constraintVertical_bias="0.545"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/totalScore"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/total_score_of_players"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/totalScoreTextView"
        app:layout_constraintStart_toStartOf="@+id/totalPlayers"
        app:layout_constraintTop_toTopOf="@+id/totalScoreTextView"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/achievementTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/achievement"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarSession" />

    <ListView
        android:id="@+id/lvPlayerScores"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:animationCache="false"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:scrollingCache="false"
        android:smoothScrollbar="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sessionsTakePhotoBtn"
        app:layout_constraintVertical_bias="1.0"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnUpdateScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/calculate"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/totalScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalPlayers"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/gameLevels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/achievement"
        app:layout_constraintBottom_toBottomOf="@+id/difficultlyLevelTextView"
        app:layout_constraintStart_toEndOf="@+id/difficultlyLevelTextView"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/difficultlyLevelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/difficulty_Level"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalScoreTextView" />

    <Button
        android:id="@+id/btnSetNumPlayers"
        android:layout_width="82dp"
        android:layout_height="45dp"

        android:layout_marginEnd="8dp"
        android:text="@string/set"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/totalPlayers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/totalPlayers"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/themeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Theme"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/difficultlyLevelTextView"
        app:layout_constraintTop_toBottomOf="@+id/difficultlyLevelTextView" />

    <Spinner
        android:id="@+id/themeVariants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/themeTextView"
        app:layout_constraintStart_toEndOf="@+id/themeTextView" />

    <ImageView
        android:id="@+id/imageViewSessionsImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/sessionsTakePhotoBtn"
        app:layout_constraintEnd_toStartOf="@+id/sessionsTakePhotoBtn"
        app:layout_constraintTop_toTopOf="@+id/sessionsTakePhotoBtn"
        app:srcCompat="@drawable/p1" />

    <Button
        android:id="@+id/sessionsTakePhotoBtn"
        android:layout_width="81dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/take_photo"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdateScore" />


</androidx.constraintlayout.widget.ConstraintLayout>